# superEasternBlott

./: .env.example  .gitignore  DESIGN_DOC_superEasternBlott.md  LICENSE  README.md  TUTORIAL.md  pyproject.toml
configs/: competition.yaml  generation.yaml  model_assets.yaml  model_paths.yaml  scoring_weights.yaml
data/raw/: submission_template.csv
src/spebt_agent/: __init__.py  agent.py  agent_state.py  config.py  env.py  graph.py  paths.py  run_state.py  schemas.py  state.py
src/spebt_agent/assets/: __init__.py  downloader.py  envs.py  registry.py
src/spebt_agent/brain/: __init__.py  executor.py  llm.py  planner.py  prompts.py
src/spebt_agent/cli/: download_assets.py  export_submission.py  health_check.py  prepare_data.py  run_agent.py  run_design.py  setup_tool_envs.py  train_brightness.py  train_retention72.py
src/spebt_agent/data/: prepare_competition_data.py  reference_loader.py
src/spebt_agent/tools/: brightness.py  candidates.py  esmc.py  external_support.py  filters.py  inverse_folding.py  ranking.py  registry.py  stability.py  structure.py  submission.py
tests/: test_agent_cli.py  test_agent_state.py  test_assets.py  test_brightness_pipeline.py  test_cli_run_design.py  test_data_reconstruction.py  test_docs_consistency.py  test_external_tools.py  test_filters.py  test_health_cli.py  test_llm.py  test_planner.py  test_ranking.py  test_run_design_workflow.py  test_run_state.py  test_smoke_tool_script.py  test_submission.py  test_tool_registry.py
