[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spebt-agent"
version = "0.1.0"
description = "spEBT LangGraph-style GFP design agent scaffold."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "openpyxl>=3.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "joblib>=1.3",
]

[project.optional-dependencies]
assets = ["huggingface_hub>=0.23"]
llm = ["openai>=1.0"]
graph = ["langgraph>=0.2"]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
